--- a/libs/client-web/cart/feature/payment-status/src/lib/payment-status.component.scss
+++ b/libs/client-web/cart/feature/payment-status/src/lib/payment-status.component.scss
@@ -1,23 +1,3 @@
-.payment-status {
-  height: theme('height.content');
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  &__container {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    align-items: center;
-    justify-content: center;
-
-    &__text {
-      text-align: center;
-    }
-  }
-}
-
 .checkmark__circle {
   stroke-dasharray: 166;
   stroke-dashoffset: 166;
@@ -38,7 +18,8 @@
   stroke-miterlimit: 10;
   margin: 0 auto;
   box-shadow: inset 0px 0px 0px theme('colors.green.500');
-  animation: fill 0.4s ease-in-out 0.4s forwards,
+  animation:
+    fill 0.4s ease-in-out 0.4s forwards,
     scale 0.3s ease-in-out 0.9s both;
 }
 
