--- a/libs/client-web/home/feature/src/lib/home.component.html
+++ b/libs/client-web/home/feature/src/lib/home.component.html
@@ -28,12 +28,15 @@
 <main class="flex gap-8 xl:gap-16 mt-16 flex-col">
   @for (section of sections(); track section.name) {
     <section class="flex flex-col items-center w-full mx-auto gap-base">
-      <div class="flex items-center justify-between w-full">
+      <div
+        class="flex sm:items-center gap-2 flex-col sm:flex-row sm:justify-between w-full"
+      >
         <h2 class="text-4xl capitalize">{{ section.name }}</h2>
         <a
           [routerLink]="booksUrl"
           [queryParams]="section.queryParams"
           [state]="{ clearFilters: true }"
+          class="underline"
         >
           See more {{ section.name | toLowerCase }} books
         </a>
