--- a/libs/client-web/account/feature/information/src/lib/components/addresses/addresses.component.html
+++ b/libs/client-web/account/feature/information/src/lib/components/addresses/addresses.component.html
@@ -64,8 +64,8 @@
 <lib-confirmation-dialog
   [isVisible]="isDeleteDialogVisible()"
   header="Address deletion"
-  (onCancel)="hideDeleteDialog()"
-  (onConfirm)="delete()"
+  (canceled)="hideDeleteDialog()"
+  (confirmed)="delete()"
 >
   <div>Are you sure you want to <strong>delete</strong> this address?</div>
 </lib-confirmation-dialog>
