--- a/libs/client-web/shared/ui/src/lib/steps/steps.component.html
+++ b/libs/client-web/shared/ui/src/lib/steps/steps.component.html
@@ -2,7 +2,7 @@
   @for (step of steps(); track index; let index = $index; let last = $last) {
     <div class="flex items-center gap-2">
       <p-badge
-        [value]="index"
+        [value]="index + 1"
         [severity]="activeIndex() === index ? 'contrast' : 'secondary'"
       />
       <span>{{ step | formatText }}</span>
