Changed books search and add edit to cart items in order-summary

--- a/libs/client-web/browse/feature/books/src/lib/books.component.html
+++ b/libs/client-web/browse/feature/books/src/lib/books.component.html
@@ -12,11 +12,11 @@
   </div>
   <div class="flex flex-col gap-base w-full overflow-x-hidden">
     <div
-      class="flex flex-col bg-content-background pt-2 pb-4 xl:pb-2 xl:pl-2 xl:pr-4 rounded-base xl:flex-row justify-between gap-base"
+      class="flex flex-col bg-content-background pt-2 pb-4 xl:pb-2 xl:pl-2 xl:pr-4 rounded-base xl:flex-row justify-between"
     >
       <p-breadcrumb [model]="breadcrumbs()" />
       <div
-        class="flex flex-col overflow-x-auto xl:flex-row xl:items-center gap-4 px-4 xl:px-0"
+        class="flex flex-col overflow-x-auto xl:flex-row xl:items-center gap-4 px-4 xl:px-0 pt-4"
       >
         <div class="flex items-center gap-base">
           <lib-sort
@@ -25,8 +25,8 @@
             (sortChanged)="changeSort($event)"
           />
           <lib-search
-            [searchText]="search()"
-            (searchChanged)="changeSearch($event)"
+            [initialSearchText]="search()"
+            (searchChange)="changeSearch($event)"
             class="w-full"
           />
           <lib-filters class="xl:hidden" />
