--- a/libs/client-web/cart/feature/order-process/src/lib/components/order-checkout/order-checkout.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/components/order-checkout/order-checkout.component.html
@@ -32,7 +32,7 @@
         styleClass="rounded-2xl"
       />
     }
-    @if (!isCreditCardSelectedAndCreditCardDataAreProvided()) {
+    @if (isCreditCardSelectedAndCreditCardDataAreNotProvided()) {
       <p-message
         severity="error"
         icon="pi pi-exclamation-circle"
