--- a/libs/client-web/cart/feature/order-summary/src/lib/order-summary.component.html
+++ b/libs/client-web/cart/feature/order-summary/src/lib/order-summary.component.html
@@ -2,8 +2,10 @@
   <lib-cart-items
     [items]="cartItems()"
     [readonly]="true"
+    [enableBackToEdit]="true"
     [loading]="cartItemsLoading()"
     [booksUrl]="booksUrl"
+    (backToEditEvent)="edit()"
   />
 
   <div class="flex flex-col gap-base">
