Slightly change cart items

--- a/libs/client-web/cart/feature/order-process/src/lib/order-process.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/order-process.component.html
@@ -1,5 +1,5 @@
 <lib-order-container>
-  <lib-cart-items />
+  <lib-order-cart-items />
 
   <div class="flex flex-col gap-base relative">
     <div class="flex flex-col gap-base">
