--- a/libs/client-web/browse/feature/books/src/lib/books.component.html
+++ b/libs/client-web/browse/feature/books/src/lib/books.component.html
@@ -16,7 +16,7 @@
     >
       <p-breadcrumb [model]="breadcrumbs()" />
       <div
-        class="flex flex-col overflow-x-auto xl:flex-row xl:items-center gap-4 px-4 xl:px-0 pt-4"
+        class="flex flex-col overflow-x-auto xl:flex-row xl:items-center gap-4 px-4 xl:p-0 pt-4"
       >
         <div class="flex items-center gap-base">
           <lib-sort
