--- a/libs/client-web/account/feature/information/src/lib/information.component.html
+++ b/libs/client-web/account/feature/information/src/lib/information.component.html
@@ -1,4 +1,6 @@
-<div class="grid grid-cols-1 relative 2xl:grid-cols-2 gap-base">
+<div
+  class="grid grid-cols-1 relative 2xl:grid-cols-2 gap-base min-h-content overflow-y-auto"
+>
   <lib-account-data />
   <lib-addresses />
 </div>
