--- a/libs/client-web/browse/feature/books/src/lib/books.component.html
+++ b/libs/client-web/browse/feature/books/src/lib/books.component.html
@@ -1,6 +1,6 @@
 <div class="flex gap-base">
   <div
-    class="flex-col gap-base hidden xl:flex sticky top-4 h-content rounded-base overflow-y-auto"
+    class="flex-col gap-base hidden xl:flex sticky top-4 min-h-content rounded-base overflow-y-auto"
   >
     <div
       class="p-4 bg-content-background flex items-center gap-base rounded-base"
