--- a/libs/client-web/cart/feature/order-process/src/lib/components/order-cart-items/order-cart-items.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/components/order-cart-items/order-cart-items.component.html
@@ -7,7 +7,7 @@
 } @else {
   <lib-cart-items
     [loading]="loading()"
-    [itemsCount]="cartItems().length"
+    [cartItemsCount]="cartItems().length"
     [booksUrl]="booksUrl"
   >
     @for (cartItem of cartItems(); track cartItem.book.id) {
