--- a/libs/client-web/cart/feature/order-summary/src/lib/order-summary.component.html
+++ b/libs/client-web/cart/feature/order-summary/src/lib/order-summary.component.html
@@ -7,7 +7,7 @@
     />
   } @else {
     <lib-cart-items
-      [itemsCount]="cartItems().length"
+      [cartItemsCount]="cartItems().length"
       [loading]="cartItemsLoading()"
       [booksUrl]="booksUrl"
     >
