--- a/libs/client-web/account/feature/favourite-books-list/src/lib/favourite-books-list.component.html
+++ b/libs/client-web/account/feature/favourite-books-list/src/lib/favourite-books-list.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col gap-base">
+<div class="flex flex-col gap-base min-h-content overflow-y-auto">
   <h2 class="text-2xl xl:text-4xl">Favourite books</h2>
   <lib-books-grid
     [books]="favouriteBooks()"
