--- a/libs/client-web/auth/feature/shell/src/lib/auth-shell.component.html
+++ b/libs/client-web/auth/feature/shell/src/lib/auth-shell.component.html
@@ -1,4 +1,6 @@
-<div class="flex flex-col-reverse gap-4 xl:grid xl:h-content xl:grid-cols-2">
+<div
+  class="flex flex-col-reverse gap-4 xl:grid xl:min-h-content xl:grid-cols-2"
+>
   <div class="flex flex-col items-center justify-center w-full">
     <router-outlet />
   </div>
