--- a/libs/client-web/browse/feature/book/src/lib/book.component.html
+++ b/libs/client-web/browse/feature/book/src/lib/book.component.html
@@ -2,7 +2,9 @@
   class="grid gap-base grid-cols-1 w-full 2xl:grid-cols-[2fr_3fr] 3xl:grid-cols-[2fr_3fr_1.2fr]"
 >
   @if (loading()) {
-    <div class="rounded-base xl:h-content overflow-hidden xl:sticky xl:top-4">
+    <div
+      class="rounded-base xl:min-h-content overflow-hidden xl:sticky xl:top-4"
+    >
       <p-skeleton libSkeleton width="100%" height="100%" />
     </div>
     <div class="flex flex-col gap-base">
@@ -33,7 +35,7 @@
     </div>
   } @else if (book()) {
     <div
-      class="relative rounded-base hidden 2xl:flex justify-center h-96 2xl:h-content overflow-hidden lg:sticky lg:top-1 xl:top-4"
+      class="relative rounded-base hidden 2xl:flex justify-center h-96 2xl:min-h-content overflow-hidden lg:sticky lg:top-1 xl:top-4"
     >
       @defer {
         <img
@@ -57,7 +59,7 @@
         </div>
       </div>
 
-      <div class="hidden 3xl:flex h-content w-full">
+      <div class="hidden 3xl:flex min-h-content w-full">
         <div
           class="4xl:sticky 4xl:top-4 flex flex-col gap-12 overflow-y-auto h-fit w-full p-base bg-content-background rounded-base"
         >
