--- a/libs/client-web/cart/feature/payment-status/src/lib/payment-status.component.html
+++ b/libs/client-web/cart/feature/payment-status/src/lib/payment-status.component.html
@@ -1,4 +1,4 @@
-<div class="h-content w-full flex items-center justify-center">
+<div class="min-h-content w-full flex items-center justify-center">
   @if (loading()) {
     <div class="flex flex-col gap-14 items-center justify-center">
       <p-progressbar
