--- a/libs/client-web/cart/ui/src/lib/order-container/order-container.component.html
+++ b/libs/client-web/cart/ui/src/lib/order-container/order-container.component.html
@@ -1,9 +1,9 @@
 <div
-  class="grid grid-cols-1 gap-base w-full xl:grid-cols-2 2xl:grid-cols-[1fr_0.5fr] 3xl:grid-cols-[1fr_0.4fr]"
+  class="grid grid-cols-1 gap-base w-full xl:grid-cols-2 2xl:grid-cols-[1fr_0.5fr] 3xl:grid-cols-[1fr_0.4fr] min-h-content"
 >
   <div class="flex flex-col gap-base">
     <h2 class="text-2xl xl:text-4xl font-bold">Cart items</h2>
-    <ng-content select="lib-cart-items" />
+    <ng-content select="lib-cart-items,[cartItems]" />
   </div>
   <div class="w-full flex flex-col gap-base">
     <h2 class="text-2xl xl:text-4xl font-bold">Checkout form</h2>
