Added min-h-content on faq

--- a/libs/client-web/support/feature/faq/src/lib/faq/faq.component.html
+++ b/libs/client-web/support/feature/faq/src/lib/faq/faq.component.html
@@ -1,8 +1,10 @@
-<lib-accordion>
-  @for (item of items(); track item.question; let index = $index) {
-    <lib-accordion-panel [key]="index">
-      <span slot="header" class="font-bold text-xl">{{ item.question }}</span>
-      <p slot="content" class="px-2">{{ item.answer }}</p>
-    </lib-accordion-panel>
-  }
-</lib-accordion>
+<div class="min-h-content">
+  <lib-accordion>
+    @for (item of items(); track item.question; let index = $index) {
+      <lib-accordion-panel [key]="index">
+        <span slot="header" class="font-bold text-xl">{{ item.question }}</span>
+        <p slot="content" class="px-2">{{ item.answer }}</p>
+      </lib-accordion-panel>
+    }
+  </lib-accordion>
+</div>
