--- a/libs/client-web/core/feature/nav/src/lib/nav.component.html
+++ b/libs/client-web/core/feature/nav/src/lib/nav.component.html
@@ -27,7 +27,7 @@
       <p-button
         libNavButton
         size="large"
-        [routerLink]="urls().orders"
+        [routerLink]="urls().account"
         routerLinkActive="bg-surface-50 dark:bg-surface-800 rounded-base"
         icon="pi pi-user"
       />
@@ -102,7 +102,7 @@
             }
           </a>
           <a
-            [routerLink]="urls().orders"
+            [routerLink]="urls().account"
             class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
             aria-label="Account"
           >
