--- a/apps/client-web/src/app/app.component.html
+++ b/apps/client-web/src/app/app.component.html
@@ -6,7 +6,7 @@
   <lib-nav />
   @defer {
     <div
-      class="w-full overflow-y-auto p-4 xl:pl-gap xl:p-0 xl:overflow-y-visible"
+      class="w-full h-full overflow-y-auto p-4 xl:pl-gap xl:p-0 xl:overflow-y-visible"
     >
       <router-outlet />
 
