--- a/libs/client-web/account/ui/src/lib/order/order.component.html
+++ b/libs/client-web/account/ui/src/lib/order/order.component.html
@@ -142,24 +142,24 @@
   <div class="bg-content-background p-4 flex flex-col rounded-base gap-6">
     <span class="text-xl">Cost summary</span>
     <div class="flex flex-col gap-6 text-left">
-      <div class="flex items-center gap-6 justify-end">
+      <div class="flex items-center justify-between gap-6 w-full">
         <span class="text-xl">Books</span>
-        <span class="text-muted-color w-48 text-end text-xl">
+        <span class="text-muted-color text-xl text-end">
           {{ bookCostTotal()?.price ?? 0 | currency: 'USD' }}
         </span>
       </div>
-      <div class="flex items-center gap-6 justify-end">
+      <div class="flex items-center justify-between gap-6 w-full">
         <span class="text-xl">Shipping</span>
-        <span class="text-muted-color w-48 text-end text-xl">
+        <span class="text-muted-color text-end text-xl">
           {{
             orderDetails()?.orderShippingMethod?.price ?? 0 | currency: 'USD'
           }}
         </span>
       </div>
       <p-divider />
-      <div class="flex items-center gap-6 justify-end">
+      <div class="flex items-center justify-between gap-6 w-full">
         <span class="text-3xl">Total cost</span>
-        <span class="text-muted-color w-48 text-end text-3xl">
+        <span class="text-muted-color text-end text-3xl">
           {{ orderDetails()?.total ?? 0 | currency: 'USD' }}
         </span>
       </div>
