--- a/libs/client-web/browse/feature/book/src/lib/components/book-details/book-details.component.html
+++ b/libs/client-web/browse/feature/book/src/lib/components/book-details/book-details.component.html
@@ -19,9 +19,18 @@
         <div
           class="flex flex-col gap-6 p-base rounded-base bg-content-background"
         >
-          <h3 class="text-3xl md:text-4xl lg:text-5xl 4xl:text-6xl">
-            {{ book()?.title }}
-          </h3>
+          <div class="flex flex-col gap-2">
+            @if (book()?.tag) {
+              <p-tag
+                class="w-fit"
+                [value]="book()?.tag"
+                [severity]="book()?.tag | bookTagToSeverity"
+              />
+            }
+            <h3 class="text-4xl lg:text-5xl 4xl:text-6xl">
+              {{ book()?.title }}
+            </h3>
+          </div>
           <div class="flex flex-wrap gap-4">
             @for (author of book()?.authors; track author.id) {
               <div class="text-xl text-muted-color">
@@ -32,16 +41,6 @@
         </div>
         <div class="grid grid-cols-1">
           <div class="flex flex-col gap-base">
-            <div class="p-base rounded-base bg-content-background">
-              @if (book()?.tag) {
-                <p-tag
-                  class="w-fit"
-                  [value]="book()?.tag"
-                  [severity]="book()?.tag | bookTagToSeverity"
-                />
-              }
-            </div>
-
             <div class="flex flex-col gap-2">
               <h3 libSectionHeader>Details</h3>
               <div
