Fix typo and hide/show drawer with order details

--- a/libs/client-web/auth/feature/register/src/lib/register/register.component.html
+++ b/libs/client-web/auth/feature/register/src/lib/register/register.component.html
@@ -95,7 +95,7 @@
             [severity]="specialError ? 'error' : 'success'"
             [icon]="specialError ? 'pi pi-times-circle' : 'pi pi-check-square'"
           >
-            At least 1 numeric character
+            At least 1 special character
           </p-message>
         </ng-container>
       }
