--- a/apps/client-web/src/app/app.component.html
+++ b/apps/client-web/src/app/app.component.html
@@ -3,16 +3,20 @@
 <div
   class="flex flex-col-reverse w-full h-svh xl:flex-row xl:p-gap xl:min-h-svh xl:h-full"
 >
-  <lib-nav />
+  @if (!isPaymentStatusActive()) {
+    <lib-nav />
+  }
   @defer {
     <div
       class="w-full h-full overflow-y-auto p-4 xl:pl-gap xl:p-0 xl:overflow-y-visible"
     >
       <router-outlet />
 
-      <div class="mt-4">
-        <lib-footer />
-      </div>
+      @if (!isCartRouteActive()) {
+        <div class="mt-4">
+          <lib-footer />
+        </div>
+      }
     </div>
   }
 </div>
