--- a/apps/api/src/assets/templates/register-confirmation.hbs
+++ b/apps/api/src/assets/templates/register-confirmation.hbs
@@ -1,9 +1,62 @@
-<p>Hey {{name}},</p>
-<p>You created an account in my book store @e-commerce </p>
-<a href='{{url}}'>Book store</a>
-{{! <p>Please click below to confirm your email</p> }}
-{{! <p> }}
-{{!--   <a href='{{url}}'>Confirm</a> --}}
-{{! </p> }}
-{{!}}
-{{! <p>If you did not request this email you can safely ignore it.</p> }}
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Simple Email</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f4;
+        margin: 0;
+        padding: 0;
+      }
+      .email-container {
+        max-width: 600px;
+        margin: auto;
+        background-color: #ffffff;
+        padding: 20px;
+        border-radius: 8px;
+      }
+      .header {
+        text-align: center;
+        background-color: #ffffff;
+        color: #000000;
+        padding: 10px 0;
+      }
+      .content {
+        padding: 20px;
+        color: #333333;
+      }
+      .footer {
+        text-align: center;
+        font-size: 12px;
+        color: #777777;
+        padding: 10px;
+      }
+      a.button {
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: #09090b;
+        color: white;
+        text-decoration: none;
+        border-radius: 5px;
+        margin-top: 10px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="email-container">
+      <div class="header">
+        <h2>Welcome to StoryStash!</h2>
+      </div>
+      <div class="content">
+        <p>Hello,</p>
+        <p>Thank you for joining. We're excited to have you on board.</p>
+        <a href="{{url}}" class="button">Go to store</a>
+      </div>
+      <div class="footer">
+        <p>&copy; {{year}} StoryStash. All rights reserved.</p>
+      </div>
+    </ysteiv>
+  </body>
+</html>
+
