Minor SEO and accesibility improvements

--- a/libs/client-web/browse/feature/books/src/lib/components/filters/price-filters/price-filters.component.html
+++ b/libs/client-web/browse/feature/books/src/lib/components/filters/price-filters/price-filters.component.html
@@ -9,6 +9,7 @@
       [maxFractionDigits]="2"
       [ngModel]="minPrice()"
       (onBlur)="setPrice('minPrice')"
+      onpaste="event.preventDefault();"
       mode="decimal"
       currency="USD"
       class="w-full"
@@ -29,6 +30,7 @@
       [ngModel]="maxPrice()"
       (onBlur)="setPrice('maxPrice')"
       [maxFractionDigits]="2"
+      onpaste="event.preventDefault();"
       mode="decimal"
       currency="USD"
       class="w-full"
