--- a/libs/client-web/browse/ui/src/lib/search/search.component.html
+++ b/libs/client-web/browse/ui/src/lib/search/search.component.html
@@ -8,6 +8,7 @@
     severity="secondary"
     icon="pi pi-search"
     size="large"
+    aria-label="Search"
     (onClick)="show()"
   />
 </p-overlaybadge>
