--- a/libs/client-web/browse/ui/src/lib/search/search.component.html
+++ b/libs/client-web/browse/ui/src/lib/search/search.component.html
@@ -52,6 +52,7 @@
       class="hidden xl:flex"
       [plain]="true"
       severity="secondary"
+      aria-label="Search"
       icon="pi pi-search"
       size="large"
       (onClick)="search()"
