--- a/libs/client-web/auth/feature/shell/src/lib/auth-shell.component.html
+++ b/libs/client-web/auth/feature/shell/src/lib/auth-shell.component.html
@@ -12,6 +12,7 @@
       fill
       class="object-fill object-center w-full"
       alt="book store"
+      priority="lazy"
     />
   </div>
 </div>
