--- a/libs/client-web/browse/ui/src/lib/sort/sort.component.html
+++ b/libs/client-web/browse/ui/src/lib/sort/sort.component.html
@@ -3,5 +3,5 @@
   [ngModel]="sort()"
   appendTo="body"
   (ngModelChange)="changeSort($event)"
-  class="w-full sm:w-56"
+  class="w-full min-w-fit 2xl:w-56"
 />
